@@ -30,7 +30,9 @@
 
 package org.restlet.ext.jaas;
 
+import java.security.AccessControlContext;
 import java.security.Principal;
+import java.security.PrivilegedAction;
 
 import javax.security.auth.Subject;
 
@@ -72,5 +74,48 @@ public final class JaasUtils {
         }
 
         return result;
+    }
+
+    /**
+     * Creates a JAAS subject on the {@link ClientInfo} and uses it to run the
+     * action, using
+     * {@link Subject#doAsPrivileged(Subject, PrivilegedAction, AccessControlContext)}
+     * .
+     * 
+     * @param <T>
+     *            the return type of the action.
+     * @param clientInfo
+     *            the client info from which to build a subject.
+     * @param action
+     *            the code to be run as the specified Subject.
+     * @param acc
+     *            the AccessControlContext to be tied to the specified subject
+     *            and action.
+     * @return the value returned by the action.
+     */
+    public static <T> T doAsPriviledged(ClientInfo clientInfo,
+            PrivilegedAction<T> action, AccessControlContext acc) {
+        Subject subject = JaasUtils.createSubject(clientInfo);
+        T result = (T) Subject.doAsPrivileged(subject, action, acc);
+        return result;
+    }
+
+    /**
+     * Creates a JAAS subject on the {@link ClientInfo} and uses it to run the
+     * action, using
+     * {@link Subject#doAsPrivileged(Subject, PrivilegedAction, AccessControlContext)}
+     * . This uses a null {@link AccessControlContext}.
+     * 
+     * @param <T>
+     *            the return type of the action.
+     * @param clientInfo
+     *            the client info from which to build as a subject.
+     * @param action
+     *            the code to be run as the specified Subject.
+     * @return the value returned by the action.
+     */
+    public static <T> T doAsPriviledged(ClientInfo clientInfo,
+            PrivilegedAction<T> action) {
+        return doAsPriviledged(clientInfo, action, null);
     }
 }
