@@ -116,7 +116,7 @@ import org.restlet.engine.Edition;
  * members.
  * 
  * @author Jerome Louvel
- * @see <a href="http://www.faqs.org/rfcs/rfc3986.html">RFC 3986</a>
+ * @see <a href="http://tools.ietf.org/html/rfc3986">RFC 3986</a>
  */
 public class Reference {
 
