@@ -8,6 +8,8 @@ Changes log
       - When an annotated method manually sets the response entity, if this
         entity is available then it will be preserved and the result of the 
         annotated method ignored. Suggested by David Fogel.
+      - Added missing JaasUtils#doAsPriviledged(..) methods.
+        Contributed by Bruno Harbulot.
     - Bugs fixed
       - Thread local variables are now cleared correctly.
         Prevented unloading of WAR files or OSGi bundles
